--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 server.port=18081
 
-spring.redis.host=13.125.156.96
+spring.redis.host=52.78.216.123
 spring.redis.port=6379
+spring.redis.password=rlaxorud
