--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@
 server.port=18081
 
 spring.redis.host=52.78.216.123
-spring.redis.port=6379
+#spring.redis.port=6379
+spring.redis.port=3000
 spring.redis.password=rlaxorud
