--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
-server.port=18081
+server.port=18082
 
 spring.redis.host=52.78.216.123
+#spring.redis.host=100.51.6.77
 #spring.redis.port=6379
 spring.redis.port=3000
 spring.redis.password=rlaxorud
