--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 server.port=18082
 
-spring.redis.host=52.78.216.123
-#spring.redis.host=100.51.6.77
-#spring.redis.port=6379
-spring.redis.port=3000
-spring.redis.password=rlaxorud
-spring.redis.cluster.nodes=100.51.6.77:3001,100.51.5.35:3001,100.51.0.162:3001,100.51.5.55:3001
+#spring.redis.host=52.78.216.123
+#spring.redis.port=3000
+#spring.redis.cluster.nodes=100.51.6.77:3001,100.51.5.35:3001,100.51.0.162:3001,100.51.5.55:3001
+
+
+management.endpoints.web.exposure.include=refresh, health, beans, httptrace, busrefresh
