CacheCheck로 리팩토링 및 간단한 Test 작성

--- a/build.gradle
+++ b/build.gradle
@@ -36,3 +36,8 @@ tasks.named('test') {
 test {
 	exclude '**/*'
 }
+
+javadoc {
+	source = sourceSets.main.java.srcDirs
+	options.encoding = 'UTF-8'
+}
