--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 
 server.port=18082
 
-spring.redis.host=13.209.81.255
+spring.redis.host=3.39.222.65
 spring.redis.port=3000
 #spring.redis.cluster.nodes=100.51.6.77:3001,100.51.5.35:3001,100.51.0.162:3001,100.51.5.55:3001
+
+#spring.kafka.bootstrap-servers=localhost:9092
 
 
 management.endpoints.web.exposure.include=refresh, health, beans, httptrace, busrefresh
