비동기 처리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.redis.port=3000
 #spring.redis.cluster.nodes=100.51.6.77:3001,100.51.5.35:3001,100.51.0.162:3001,100.51.5.55:3001
 
 spring.kafka.bootstrap-servers=3.34.142.155:9092
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.enable-auto-commit=false
-spring.kafka.consumer.group-id=boot
+#spring.kafka.consumer.auto-offset-reset=earliest
+#spring.kafka.consumer.enable-auto-commit=false
+#spring.kafka.consumer.group-id=boot
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-
+spring.kafka.listener.ack-mode=manual
 
 management.endpoints.web.exposure.include=refresh, health, beans, httptrace, busrefresh
